# python-tiny-api

./: Dockerfile  Procfile  README.md  application.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.ebextensions/: server.config
clients/: __init__.py  bayesianNetwork.py  blowserless.py  sqlite.py
model/_abstruct/: __init__.py  entity.py  repository.py  service.py  usecase.py  valueObject.py
model/_error/: __init__.py  abstruct.py  client.py  repository.py  service.py  usecase.py  valueObject.py
model/baysapp/dto/: __init__.py  predict_naive.py  predict_network.py
model/baysapp/entity/: __init__.py  category_score.py  evidence.py  sex_score.py  time_score.py  use_time_score.py  word.py
model/baysapp/payload/: __init__.py  predict_naive.py  predict_network.py
model/baysapp/repository/: __init__.py  words.py
model/baysapp/service/: __init__.py  get_laplace_smoothing_prob.py  get_news_category_prob.py  parse_words.py  predict_naive.py  predict_network.py
model/baysapp/usecase/: __init__.py  parse_words.py  predict_naive.py  predict_network.py
model/baysapp/valueObject/: __init__.py  appearance.py  category_evidence.py  news_categories.py  predict_type.py  score.py  sentence.py  sex_evidence.py  time_evidence.py  use_time_evidence.py  word.py
model/mhjoinup/dto/: __init__.py  emit_management.py  emit_webhook.py
model/mhjoinup/entity/: __init__.py  chat_data.py  chat_message.py  manage_instant.py
model/mhjoinup/payload/: __init__.py  emit_management.py  emit_webhook.py
model/mhjoinup/usecase/: __init__.py  emit_webhook.py
model/mhjoinup/valueObject/: __init__.py  channel_id.py  chat_message.py  message.py  user_avatar.py  user_id.py  user_name.py  user_quest.py  youtube_id.py
model/nico_chan/dto/: __init__.py  send_live_schedule.py
model/nico_chan/payload/: __init__.py  send_live_schedule.py
model/nico_chan/service/: __init__.py  send_message.py  take_screenshot.py
model/nico_chan/usecase/: __init__.py  (+1 more)
routes/: __config.py  __init__.py  baysapp.py  mhjoinup.py
routes/discord_bot_webhook/: __init__.py  nico_chan.py
src/python_tiny_api/: __init__.py
static_data/: screentime.csv  words.db
(+2 files in other folders)
