[project]
name = "python-tiny-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pdmuds4", email = "ryosuke3191@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_tiny_api"]

[tool.rye.scripts]
dev = "python main.py"