[project]
name = "python-tiny-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pdmuds4", email = "ryosuke3191@gmail.com" }
]
dependencies = [
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-dotenv>=1.1.0",
    "pytest>=8.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_tiny_api"]

[tool.rye.scripts]
dev = "python application.py"
test = "pytest -s"